test/fixtures/diagnostics/type-checker/negative/collection-expression-mismatch/input.tysh
namespace Samples.CollectionDiagnostics

fun invalid(): int[] = [1, "two"]
